# NSU_OOP

./: CMakeLists.txt  Min_tree.cpp  data.txt  data2.txt  is_prime.hpp  is_prime_mutex.cpp  logger.cpp  main.cpp
tests/: is_prime_tests.cpp
